Bug 507191 - Selecting account in the investment tab doesn't connect/open the account in the ledger tab
Summary: Selecting account in the investment tab doesn't connect/open the account in t...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-18 12:29 UTC by Michael Carpino
Modified: 2025-07-18 20:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Carpino 2025-07-18 12:29:53 UTC
SUMMARY
In version 5.1.3 if you went to the Investment tab and open/review an account then you opened the ledger tab the account that you reviewed in the Investment tab opened.  With version 5.2 if you first go to the Investment tab and review an account and then open the Ledger tab the account no longer opens.

STEPS TO REPRODUCE
1. Go to the Investment tab
2. Select an Account that is not opened in the Ledger
3. Go to the Ledger tab

OBSERVED RESULT
Investment account doesn't open in the Ledger

EXPECTED RESULT
Investment account did open in the Ledger tab in version 5.1.3

SOFTWARE/OS VERSIONS
Linux - Fedora 42
Comment 1 Ingo Klöcker 2025-07-18 13:12:00 UTC
I also noticed this. The old behavior was very convenient because after manually updating the prices of the investments I could quickly switch to the ledger to verify that the total matches the total from the quarterly depot report.
Comment 2 Thomas Baumgart 2025-07-18 14:07:47 UTC
Git commit ce53932f050f697a5efda282b41e51712db8d22c by Thomas Baumgart.
Committed on 18/07/2025 at 14:07.
Pushed by tbaumgart into branch 'master'.

Provide method to quickly reach the ledger from the investment view

Older versions kept the investment and ledger view in sync. Since 5.2 now supports multiple ledgers this is not possible anymore. Using the new button one can quickly switch to the ledger view of the opened investment account.
FIXED-IN: 5.2.1

M  +16   -0    kmymoney/views/kinvestmentview.cpp
M  +8    -1    kmymoney/views/kinvestmentview.ui

https://invent.kde.org/office/kmymoney/-/commit/ce53932f050f697a5efda282b41e51712db8d22c
Comment 3 Thomas Baumgart 2025-07-18 16:18:03 UTC
Git commit d802d1d40a26263e82413af6b3af127e8409f085 by Thomas Baumgart.
Committed on 18/07/2025 at 15:46.
Pushed by tbaumgart into branch '5.2'.

Provide method to quickly reach the ledger from the investment view

Older versions kept the investment and ledger view in sync. Since 5.2 now supports multiple ledgers this is not possible anymore. Using the new button one can quickly switch to the ledger view of the opened investment account.
FIXED-IN: 5.2.1
(cherry picked from commit ce53932f050f697a5efda282b41e51712db8d22c)

M  +14   -0    kmymoney/views/kinvestmentview.cpp
M  +8    -1    kmymoney/views/kinvestmentview.ui

https://invent.kde.org/office/kmymoney/-/commit/d802d1d40a26263e82413af6b3af127e8409f085
Comment 4 Michael Carpino 2025-07-18 20:43:47 UTC
Thanks Thomas,

Along with being a Wizard you're a Rock Star!

Cheers