Provide method to quickly reach the ledger from the investment view

Older versions kept the investment and ledger view in sync. Since 5.2 now supports multiple ledgers this is not possible anymore. Using the new button one can quickly switch to the ledger view of the opened investment account.

BUG: 507191
FIXED-IN: 5.2.1